Fixing page height on mobile

--- a/webapp/src/components/Table.module.scss
+++ b/webapp/src/components/Table.module.scss
@@ -179,7 +179,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: space-between;
+        // justify-content: space-between;
         gap: .5em;
 
         transition: height 300ms;
@@ -214,6 +214,7 @@
             display: flex;
             gap: .5em;
             align-items: center;
+            margin: 0 auto;
 
             a {
                 // border: 1px solid dodgerblue;
